# rust-swagger-validator

./: .appveyor.yml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  mypy.ini  pylintrc  requirements-bootstrap.txt  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ci/: appveyor_template.yaml  ci-config.py  circleci_template.yaml  config-schema.json  config.yaml  debug-travis-build.sh  delete-appveyor-cache.sh  min-rustc-installed.py  travis_template.yaml
python/rust_swagger_validator/: __init__.py  __main__.py  swagger_spec.py
python/tests/: rust_swagger_validator_test.py
rust/src/: build.rs  errors.rs  lib.rs  loaders.rs  pyo3_built.rs  swagger_schema.rs
rust/src/python/: mod.rs  object_macros.rs  pyo3_built.rs
rust/tests/: luncher.rs  test_lib.rs  test_loaders.rs  test_swagger_schema.rs
rust/tests/test_python/: mod.rs
schema/: swagger2.0.json
test-data/json-files-loaders-tests/: invalid-0.json  invalid-1.json
test-data/json-invalid-specs/: swagger.json
test-data/json-valid-specs/: swagger.json
test-data/yaml-files-loaders-tests/: invalid-1.yaml
test-data/yaml-invalid-specs/: swagger.yaml
test-data/yaml-valid-specs/: swagger.yaml
