[package]
name = "rust_swagger_validator"
version = "0.1.1"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
publish = false
build = "rust/build.rs"

[badges]
appveyor = { repository = "macisamuele/rust-swagger-validator", branch = "master", service = "github"}
travis-ci = { repository = "macisamuele/rust-swagger-validator", branch = "master" }
codecov = { repository = "macisamuele/rust-swagger-validator", branch = "master", service = "github" }

[lib]
path = "rust/src/lib.rs"
name = "rust_swagger_validator"
crate-type = ["rlib", "cdylib"]

[features]
python_bindings = ["chrono", "pyo3"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[[test]]
path = "rust/tests/luncher.rs"
name = "rust_swagger_validator_tests"

[build-dependencies]
built = "0.3.0"

[dependencies]
chrono = { version = "0.4.6", optional = true }  # Optional dependency as required only during python bindings
reqwest = "0.9.14"
serde_json = "1.0.39"
serde_yaml = "0.8.8"
url = "1.7.2"
valico = "3.0.0"

[dependencies.pyo3]
version = "0.6.0"
features = ["extension-module"]
optional = true
